début css page rose des vents

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 body {
   background-image: url(../public/assets/images/carte.jpg);
 }
+
+.bannieres__recit--container {
+  display: flex;
+}
+.banniere__recit--container__banniere {
+  margin-right: 20px;
+}
+.banniere__recit--image {
+  width: 415px;
+  height: 600px;
+}
