--- a/src/components/banniere/banniere.module.css
+++ b/src/components/banniere/banniere.module.css
@@ -3,7 +3,16 @@
 }
 
 .img {
-    width: 415px;
-    height: 600px;
-    object-fit: cover;
+    width: 100%;
+    height: auto;
+}
+
+@media (min-width: 768px) {
+    .banniere {
+        .img {
+            width: 415px;
+            height: 600px;
+            object-fit: cover;
+        }
+    }
 }
