--- a/src/components/banniere/banniere.module.css
+++ b/src/components/banniere/banniere.module.css
@@ -1,35 +1,51 @@
 .banniere {
-    position: relative;
-    transition: transform 0.3s ease-in-out;
-    transform: translateY(0);
-}
-
-.banniere:hover {
-    transform: translateY(-10px);
-}
-
-.banniereTitle {
-    position: absolute;
-    top: 0px;
-    left: 10px;
-    color: #F6F5F4;
-    z-index: 2;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.6);
+  max-width: 100%;
 }
 
 .img {
-    width: 100%;
-    height: auto;
-    filter: brightness(0.8);
-    z-index: 1;
+  max-width: 100%;
+  height: auto;
 }
 
-@media (min-width: 768px) {
-    .banniere {
-        .img {
-            width: 415px;
-            height: 600px;
-            object-fit: cover;
-        }
-    }
+.img:hover {
+  transform: translateY(-10px);
+  transition: transform 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+@media (min-width: 391px) {
+  .banniere {
+    position: relative;
+    padding: 10px;
+  }
+
+  .banniere:hover .banniereTitle {
+    top: 10px;
+    left: 30px;
+    transition: top 0.3s ease-in-out, left 0.3s ease-in-out;
+  }
+
+  .banniereTitle {
+    position: absolute;
+    top: 5px;
+    left: 20px;
+    z-index: 1;
+    color: #f6f5f4;
+    font-weight: normal;
+    background-color: rgba(30, 30, 36, 0.7);
+    padding: 5px 10px;
+    max-width: 60%;
+    border-radius: 5px;
+  }
+
+  .img {
+    max-width: 300px;
+    height: 65vh;
+    object-fit: cover;
+    filter: brightness(0.6);
+  }
+  .img:hover {
+    transform: translateY(0px);
+    transition: transform 0.3s ease-in-out;
+  }
 }
