--- a/src/components/subCarousel/subCarousel.module.css
+++ b/src/components/subCarousel/subCarousel.module.css
@@ -5,33 +5,59 @@
   width: 100%;
   height: 100%;
   background-color: black;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   color: white;
-  z-index: 1000;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 50px;
+  padding: 10px;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.imageTextuel {
+  position: relative;
+  max-width: 55%;
+}
+
+.texte {
+  position: absolute;
+  top: 15%;
+  left: 20%;
+  width: 70%;
+  height: auto;
+  font-size: 2vw;
+  color: #1e1e24;
+  font-weight: 700;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  word-wrap: break-word;
 }
 
 .image {
-  max-width: 100%;
-  max-height: 80%;
+  width: 100%;
+  height: 80%;
   object-fit: contain;
 }
 
-.info {
-  text-align: center;
-  margin-top: 20px;
+.controls {
+  margin-left: 20px;
+  max-width: 45%;
 }
 
-.closeButton {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  background: red;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  cursor: pointer;
+.title {
+  max-width: 500px;
+}
+
+.reference {
   font-size: 16px;
+  color: #f6f5f4;
+  max-width: 500px;
 }
