--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: "Cormorant Upright", serif;
-  background-image: url(../assets/images/carte.jpg);
+  background-image: url(../Anticoste/assets/images/carte.jpg);
 }
 
 .app {
