--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 body {
   font-family: "Cormorant Upright", serif;
   background-image: url(../Anticoste/assets/images/carte.jpg);
+  background-color: red;
 }
 
 .app {
