Ajout de l'emplacement à propos dans l'accueil

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -14,3 +14,15 @@
   font-weight: 700;
   color: #1e1e24;
 }
+
+
+.second__title{
+  margin-left: auto;
+  margin-right: 100px;
+  font-size: 32px;
+  color: red;
+}
+.second__title:hover{
+  cursor: pointer;
+text-decoration: underline;
+}
