--- a/src/components/subCarousel/subCarousel.module.css
+++ b/src/components/subCarousel/subCarousel.module.css
@@ -30,22 +30,30 @@
   overflow: hidden;
 }
 
+.contentImage:hover .info {
+  bottom: 0;
+  /* Slide up on hover */
+}
+
 .image {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
+  transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
-@media (min-width: 1200px) {
-  .image {
-    max-width: 95vw;
-    max-height: 95vh;
-  }
+.fadeOut {
+  opacity: 0;
+  /* Fade out */
+  transform: scale(0.9);
+  /* Shrink slightly */
+}
 
-  .info {
-    width: 80vw;
-    left: 50;
-  }
+.fadeIn {
+  opacity: 1;
+  /* Fade in */
+  transform: scale(1);
+  /* Grow to full size */
 }
 
 .info {
@@ -61,14 +69,39 @@
   transition: bottom 0.5s ease;
 }
 
+.texte {
+  position: absolute;
+  max-width: 70%;
+  color: #1E1E24;
+  top: 5%;
+  left: 10%;
+  font-size: calc(1px + 2vw);
+  font-weight: bold;
+  text-shadow: 2px 2px rgba(18, 18, 18, 0.2);
+}
+
+@media (min-width: 1200px) {
+  .image {
+    max-width: 100vw;
+    max-height: 100vh;
+  }
+
+  .info {
+    left: 13px;
+    width: 97.9%;
+  }
+}
+
 .infoTitle {
-  font-size: calc(1rem + 0.5vw);
-  margin: 0;
+  font-size: calc(1.5rem + .5vw);
+  margin: 0 0 15px 0;
+  text-align: start;
 }
 
 .reference {
-  font-size: calc(0.8rem + 0.3vw);
+  font-size: calc(1rem + 0.3vw);
   margin: 5px 0 0;
+  text-align: start;
 }
 
 .closeButton {
@@ -145,6 +178,15 @@
   cursor: pointer;
   margin: 0 10px;
   transition: translate 0.3s ease;
+  width: clamp(60px, 9vw, 100px);
+  /* Scale width proportionally */
+  height: clamp(60px, 9vw, 100px);
+}
+
+.prevButton:hover,
+.nextButton:hover {
+  transform: scale(1.1);
+  /* Slightly enlarge on hover */
 }
 
 .prevButton:hover {
@@ -153,4 +195,48 @@
 
 .nextButton:hover {
   translate: 10px;
+}
+
+.prevButton img,
+.nextButton img {
+  width: 100%;
+  /* Ensure the SVG scales with the button */
+  height: 100%;
+}
+
+@media (max-width: 600px) {
+  .contentImage {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .info {
+    position: static;
+    /* Make the text appear below the image */
+    background: none;
+    /* Remove the gradient background */
+    color: #FFF8F0;
+    /* Use a darker text color for readability */
+    padding: 10px 0;
+    text-align: left;
+    /* Align text to the left */
+    transition: none;
+    /* Disable hover animation */
+  }
+
+  .infoTitle {
+    font-size: 1rem;
+    /* Adjust font size for smaller screens */
+  }
+
+  .reference {
+    font-size: 0.9rem;
+    /* Adjust font size for smaller screens */
+  }
+
+  .prevButton,
+  .nextButton {
+    margin: 0 5px;
+    /* Reduce margin for smaller screens */
+  }
 }
